Added some JS and Angular

--- a/app.yaml
+++ b/app.yaml
@@ -8,10 +8,12 @@ handlers:
 - url: /static
   static_dir: static
 
+- url: /components
+  static_dir: components
 
 - url: /.*
   script: blag.app
-  
+
 libraries:
 - name: jinja2
   version: latest
